--- a/Plearnium/src/views/juego.ejs
+++ b/Plearnium/src/views/juego.ejs
@@ -46,27 +46,30 @@
                     <div class="contenido">
                         <h3>Ranking</h3>
                         <br>
-                        <% let biggest;nickname; %>
-                        <% var i = 0 %>
                         <% players.forEach(function(player, index) { %>
-                            <div class="<%player.nickname%>"><p><%= i+1 %> . <b><%- player.nickname %></b>   : <%- player.puntaje %> puntos</b> <%if(player.winner) { %> MOSTRAR IMAGEN   <%}%></p></div>
-                        <%i++%>
+                            <div class="<%player.nickname%>">
+                                <p>
+                                    <b><%- player.nickname %> : <%- player.puntaje %> puntos</b> 
+                                    <%if(index===0) { %> 
+                                        PRIMER LUGAR  
+                                    <%}%>
+                                    <%if(index===1) { %> 
+                                        SEGUNDO LUGAR   
+                                    <%}%>
+                                    <%if(index===2) { %> 
+                                        TERCER LUGAR   
+                                    <%}%>
+                                </p>
+                            </div>
                         <% })%>
-
                     </div>
                 </div>
-                
             </div>
             <br><br>
-        
             <div class="col-12">
-            <iframe src="/game/index.html?id=<%-user.id%>" width="1320" height="800" title="Juego" allowfullscreen></iframe>
-            <% if (user.tipo == "Jugador") {%>
-                        <% } %>
+                <iframe src="/game/index.html?id=<%-user.id%>" width="1320" height="800" title="Juego" allowfullscreen></iframe>
             </div>
         </div>   
-        
-      
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
     </body>
