--- a/Plearnium/src/views/juego.ejs
+++ b/Plearnium/src/views/juego.ejs
@@ -29,8 +29,7 @@
             </div>
             <% if (user.tipo == "Administrador") {%>
                 <a href="usuario"><button" class=" button_admin btn btn-danger">Admin</button></a>
-               
-                    <% } %>
+            <% } %>
             <div class="cont">
                 <div class="box">
                     <div class="icon"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></div>
@@ -47,19 +46,17 @@
                         <h3>Ranking</h3>
                         <br>
                         <% players.forEach(function(player, index) { %>
-                            <div class="<%player.nickname%>">
-                                <p>
-                                    <b><%- player.nickname %> : <%- player.puntaje %> puntos</b> 
-                                    <%if(index===0) { %> 
-                                        PRIMER LUGAR  
-                                    <%}%>
-                                    <%if(index===1) { %> 
-                                        SEGUNDO LUGAR   
-                                    <%}%>
-                                    <%if(index===2) { %> 
-                                        TERCER LUGAR   
-                                    <%}%>
-                                </p>
+                            <div class="player-ranking">
+                                <%if(index===0) { %> 
+                                    <img class="crowns" src="img/crown-1.png" alt="crown-1">
+                                <%}%>
+                                <%if(index===1) { %> 
+                                    <img class="crowns" src="img/crown-2.png" alt="crown-2"> 
+                                <%}%>
+                                <%if(index===2) { %> 
+                                    <img class="crowns" src="img/crown-3.png" alt="crown-3">
+                                <%}%>
+                                <p><b><%- player.nickname %> : <%- player.puntaje %> puntos</b></p>
                             </div>
                         <% })%>
                     </div>
