--- a/Plearnium/src/views/inicio.ejs
+++ b/Plearnium/src/views/inicio.ejs
@@ -15,18 +15,18 @@
                     <li><a href="iniciar_sesion">CERRAR SESIÓN</a></li>
                 </ul>
             </nav>
-            <div class="navbar">
-                <a href="https://mx.ternium.com/es" target="_blank"> <img src="img/logo.png" class="logo"></a>
-                <nav>
-                    <ul>
-                        <li><a href="inicio">INICIO</a></li>
-                        <li><a href="juego">JUEGO</a></li>
-                        <li><a href="sobre_ternium">SOBRE TERNIUM</a></li>
-                        <li><a href="proceso">PROCESO</a></li>
-                        <li><a href="creadores">CREADORES</a></li>
-                    </ul>
-                </nav>
-
+            <a href="https://mx.ternium.com/es" target="_blank"> <img src="img/logo.png" class="logo"></a>
+            <br>
+            <input type="checkbox" class="checkbox" id="check">
+            <label class="menu" for="check">MENU</label>
+            <div class="left-panel">
+                <ul>
+                    <li><a href="inicio">INICIO</a></li>
+                    <li><a href="juego">JUEGO</a></li>
+                    <li><a href="sobre_ternium">SOBRE TERNIUM</a></li>
+                    <li><a href="proceso">PROCESO</a></li>
+                    <li><a href="creadores">CREADORES</a></li>
+                </ul>
             </div>
 
             <div class="rowinicio">
