--- a/Plearnium/src/views/procesoV1.ejs
+++ b/Plearnium/src/views/procesoV1.ejs
@@ -39,12 +39,16 @@
             </div>
             <div class="proceso h1 p">
                 <div class="intro_proyecto">
-                    <h1>Introducción al Proyecto V2</h1>
-                    <p> La empresa Ternium ha contactado al Tecnológico de Monterrey para que sus alumnos de informática,
-                        más específicamente alumnos de 4 semestre, puedan desarrollar un videojuego para que los nuevos
-                        ejecutivos del área de ventas pudieran hacer capacitaciones y onboarding para que estos sean más
-                        entretenidas y amenas. Este reto es un seguimiento a un reto anterior con este propósito, 
-                        el propósito principal de este reto es continuar, optimizar y hacer más presentable el videojuego.</p>
+                    <h1>Introducción al Proyecto</h1>
+                    <p> Como parte del plan de estudios del Tec21, a los alumnos de cuarto
+                        semestre se les asignaron socioformadores que apoyaran en su
+                        educación a la vez que ellos ofrecían un reto para resolver que
+                        estuvieran enfrentando. En este caso, la empresa Ternium cuenta con
+                        diversas necesidades presentes en el área de ventas; estas necesidades
+                        se tratan de la capacitación y onboarding de sus nuevos ejecutivos en
+                        dicha área de una manera más entretenida y amena. Este reto está basado
+                        en la mejora de la aplicación de sus mecánicas y dinámicas para estos 
+                        procesos, a través de la gamificación por medio de un videojuego.</p>
                 </div>
             </div>
             <div class="descripcion h1">
@@ -53,46 +57,44 @@
                     <div class="row gap-3">
                         <div class="column p gap-3">
                             <ciclos>Ciclo 0</ciclos>
-                            <br>
-                            <p>Aquí se empezó a familiarizar con el proyecto ya realizado, 
-                            tanto el videojuego, como el código de la página web. Con esto 
-                            se definirían los cambios que se realizarían y se especificaría 
-                            como serían los requerimientos y cambios que se realizarían en
-                            el futuro. Este ciclo fue de análisis </p>
+                            <br><p>Dando comienzo al proyecto, se inició con la ideación 
+                                y el diseño del videojuego y la página web. Ya definidas 
+                                las ideas, de acuerdo a los requerimientos otorgados, se 
+                                realizó un mockup parcada uno de estos y de esta manera 
+                                comenzar el setup de nuestro producto. Para este ciclo no 
+                                fue necesario hacer  código. </p>
                         </div>
                         <div class="column p">
                             <ciclos>Ciclo 1</ciclos>
-                            <br>
-                            <p>En este ciclo se empezarían a desarrollar los cambios propuestos
-                                en el ciclo 0, aquí los cambios en el Unity se hacen notorios, 
-                                así como su optimización. Y en cuanto a la página web, esta ya 
-                                empieza a ser actualizada, su front-end y back-end empieza a
-                                tener sus respectivos cambios utilizando HTML y CSS, sin alejarse 
-                                demasiado del diseño inicial. Todo esto se actualizó en la 
-                                documentación de especificación de requerimientos.
+                            <br><p>Actualización de los documentos de Especificación de Requerimientos
+                                y Especificación del Diseño, conversión de todas las pantallas web a
+                                pantallas de front-end utilizando HTML y CSS, conversión del escenario
+                                principal del Mockup a una escena principal en Unity y la creación de 
+                                la base de datos.
                             </p>
                         </div>
                         <div class="column p">
                             <ciclos>Ciclo 2</ciclos>
-                            <br>
-                            <p>Esta fue una actualización mayor del ciclo anterior, actualizando 
-                                cada aspecto de los códigos tanto de Unity como del sitio web.
-                                 Aparte de que en este ciclo se empezaron las pruebas del ambos 
-                                 casos, y su conexión videojuego-sitio web.
+                            <br><p>Elaboración de la versión inicial del documento Especificación
+                                de las pruebas del proyecto y la continuación con el desarrollo de
+                                la aplicación tanto en la parte web, front y back-end, el videojuego
+                                y la base de datos.
                             </p>
                         </div>
                         <div class="column p">
                             <ciclos>Ciclo 3</ciclos>
-                            <br>
-                            <p>EN PROCESO...</p>
+                            <br><p>Conexión del videojuego con la base de datos, conexión de la 
+                                página web con la base de datos, conexión del videojuego a la página 
+                                web, conclusión del videojuego y la página web.
+                            </p>
                         </div>
                     </div>
-                <!-- </div>
+                </div>
                 <img src="img/proceso_web.png" class="foto_ciclo0">
                 <img src="img/ciclo1.jpg" class="foto_ciclo1">
                 <img src="img/ciclo2.jpg" class="foto_ciclo2">
                 <img src="img/ciclo3.jpg" class="foto_ciclo3">
-            </div> -->
+            </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
