--- a/Plearnium/src/views/usuario.ejs
+++ b/Plearnium/src/views/usuario.ejs
@@ -30,6 +30,7 @@
         <a href="configuracion"><button type="button" class="button_asignar btn btn-danger">Configuración</button></a>
         <a href="estadisticas"><button type="button" class="button_asignar btn btn-danger">Estadísticas</button></a>
         <a href="conceptos"><button type="button" class="button_asignar btn btn-danger">Conceptos</button></a>
+        <a href="inventarioTiendita"><button type="button" class="button_asignar btn btn-danger">Inventario Tiendita</button></a>
         <table>
             <thead>
                     <th>ID</th>
