--- a/Plearnium/src/views/creadores.ejs
+++ b/Plearnium/src/views/creadores.ejs
@@ -74,6 +74,15 @@
                     </div>
                 </div>
             </div>
+            <div class="creador_gerardo_m">
+                <div class="col_text_g h1">
+                    <h1>Gerardo Mora</h1>
+                    <div class="col_text_g p">
+                        <p>Co-administrador de proyecto</p>
+                        <a href="gerardoCV"><button type="button" class=" button_gerardo btn btn-outline-danger" style="size:50px">CV</button></a>
+                    </div>
+                </div>
+            </div>
             <div class="agradecimiento_profes p">
                 <div class="agr_prof h1">
                     <h1>Agradecimientos</h1>
