Added acknowledgments to teachers

--- a/Plearnium/src/views/creadores.ejs
+++ b/Plearnium/src/views/creadores.ejs
@@ -87,9 +87,11 @@
                 <div class="agr_prof h1">
                     <h1>Agradecimientos</h1>
                     <div class="agrec_profs p">
-                        <p style= "font-size: 15px"> Un especial agradecimiento a los profesores <b>Elvia Rosas</b>, <b>David Cantú</b>
-                            y <b>Rafael Salazar</b>, por poder hacer que este proyecto se hiciera realidad.
-                        </p>
+                        <div style= "font-size: 15px; color: #fff"> Un especial agradecimiento a los profesores <b>Elvia Rosas</b>, <b>David Cantú</b>
+                            y <b>Rafael Salazar</b>, por poder hacer que este proyecto se hiciera realidad. Además de agradecer a los
+                            profesores <b> Juventino Guzmán</b>, <b>Marlene Sánchez</b> y <b>Alexis Damián</b> por haber sido vitales 
+                            para completar este proyecto.
+                        </div>
                     </div>
                 </div>
             </div>
